bodhilibrs_frompyo3/tests/ui/error-unsupported-field-union.stderr
error: Unions are not supported
 --> tests/ui/error-unsupported-field-union.rs:4:1
  |
4 | / union TestUnsupportedUnion {
5 | |   weight: i32,
6 | |   temp: f32,
7 | | }
  | |_^
