bodhilibrs_frompyo3/tests/ui/error-unsupported-field-union.rs
use frompyo3::FromPyO3;

#[derive(FromPyO3)]
union TestUnsupportedUnion {
  weight: i32,
  temp: f32,
}

fn main() {}
